[FTL] FTL allocation for async Function is incorrect https://bugs.webkit.org/show_bug.cgi?id=176214

Reviewed by Saam Barati.

In FTL, allocating async function / async generator function was incorrectly using
JSFunction logic. While it is not observable right now since sizeof(JSFunction) == sizeof(JSAsyncFunction),
but it is a bug.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileNewFunction):


Canonical link: https://commits.webkit.org/192879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221479 268f45cc-cd09-0410-ab3c-d52691b4dbfc